--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,7 +8,10 @@
           <li class="nav-item"><a class="nav-link" href="/alunos">Alunos</a></li>
           <li class="nav-item"><a class="nav-link" href="/professores">Professores</a></li>
           <li class="nav-item"><a class="nav-link" href="/integrantes">Integrantes</a></li>
+          <li class="nav-item"><a class="nav-link" href="/cursos">Cursos</a></li>
+
         </ul>
+
         
       </ul>
     </div>
